Version: 17.0.15
Date: 2019-12-06
  Features:
    - Shared damage is proportional to the distance between the injured player and the other player vs the generated map size. So on big maps you need to be further away from them to recive half damage than a small map.
    - Biter hunting group message includes clickable GPS location of targeted player's position.
  Changes:
    - Shared damage kill alerts include how many kills and deaths the 2 participants have had
    - Includes command to do a one off fix on bad old repeating scheduled events: december_2019_fix_scheduled_events
  Bugfixes:
    - fixed typo in snowball mod compatibility added in 17.0.13
    - Shared damage - damage <= 0 is ignored
    - Biter hunt groups will be given new attack orders should thye lose them.
    - Biter hunt group will not declare player vicotry before they are all dead now.
    - Correct further intermittent startup crash for some players with scheduled event functions shown in logs.
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.14
Date: 2019-12-05
  Features:
    - Shared damage - When a player dies to shared damage the "killer" player is named and shamed. Also logged to stats table (no viewer yet)
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.13
Date: 2019-12-03
  Features:
    - Players are safe from suffering shared damage for 60 seconds after respawn.
    - Biter Hunting Packs, if the target player disconnects it is a loss. Biters will be re-targeted at spawn after the target dies or disconnects.
  Changes:
    - Added shared damage exclusion for "snowball" type damage to avoid conflicting with that mod.
    - Shared damage reduced to 75%
  Bugfixes:
    - Correct intermittent crash for some players with scheduled event functions shown in logs.
    - Fix crash when a vehicle died by non mod means.