@@ -8,7 +8,9 @@ jd_plays-december-2019-warning-label=Incomming Tunneling Biter Pack
 jd_plays-december-2019-target-label=Pack currently hunting __1__ on __2__
 
 [api-description]
-jd_plays-december-2019_biters_attack_now=: Set the next biter hunt to come now
+jd_plays-december-2019-biters_attack_now=: Set the next biter hunt to come now
+jd_plays-december-2019-biters_write_out_hunt_group_results=: Writes out to your script-output folder the results from all previous biter hunt groups as JSON.
+jd_plays-december-2019-shared_damage_write_out_kills_deaths=: Writes out to your script-output folder all players kills and deaths from shared damage as JSON.
 
 [damage-type-name]
 jd_plays-december-2019-freezing-fog=Freezing Fog
